--- a/src/common.blocks/button.scss
+++ b/src/common.blocks/button.scss
@@ -13,7 +13,7 @@
     }
   }
 
-  &_alt-active {
+  &_alt-activ {
     @include mixins.button(white, $primaryLight, $primaryLight);
     border: $hoverBorder;
   }
